Fix: Layout shift after route transition

--- a/src/app/post-single/post-single.component.scss
+++ b/src/app/post-single/post-single.component.scss
@@ -1,7 +1,14 @@
-@import url('https://fonts.googleapis.com/css2?family=Fira+Code:wght@500&display=swap');
-@import url('https://cdn.jsdelivr.net/gh/devicons/devicon@v2.14.0/devicon.min.css');
+@import url("https://fonts.googleapis.com/css2?family=Fira+Code:wght@500&display=swap");
+@import url("https://cdn.jsdelivr.net/gh/devicons/devicon@v2.14.0/devicon.min.css");
+
+:host ::ng-deep {
+  display: block;
+  width: 100%;
+  @import "highlight.js/scss/shades-of-purple.scss";
+}
 article {
-  font-family: Roboto, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-family: Roboto, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans",
+    "Helvetica Neue", sans-serif;
   div.featured-image {
     width: 100%;
     height: 400px;
@@ -10,7 +17,7 @@ article {
     background-position: center center;
     background-repeat: no-repeat;
     margin-bottom: 30px;
-    box-shadow: 0px 3px 10px rgba(0,0,0,.2);
+    box-shadow: 0px 3px 10px rgba(0, 0, 0, 0.2);
     display: flex;
     justify-content: flex-end;
     align-items: flex-end;
@@ -23,8 +30,7 @@ article {
       mix-blend-mode: luminosity;
       padding: 5px 15px 5px 5px;
       border-bottom-right-radius: 5px;
-      backdrop-filter: blur(10px) brightness(.4);
-
+      backdrop-filter: blur(10px) brightness(0.4);
     }
   }
   div.article-inner {
@@ -33,101 +39,100 @@ article {
   .post-content {
     max-width: 800px;
     margin: auto;
-    h2{
-      //background: #c90415;
-      display: inline-block;
-      clear: both;
-      margin-inline: 20px;
-      font-weight: 700;
-      font-family: "Roboto Condensed";
-      color: var(--red);
-      padding: 5px;
-      margin-top: 40px;
-      margin-bottom: 30px;
-      margin-inline: -5px;
-      //box-shadow: -10px 0px 0px #c90415, 10px 0px 0px #c90415, 0px 0px 10px #c90415;
-    }
-    blockquote {
-      background: var(--red-lightest);
-      padding: 1rem 2rem;
-      position: relative;
-      font-weight: 600;
-      p {
-        margin: 0;
+    ::ng-deep {
+      h2 {
+        //background: #c90415;
+        display: inline-block;
+        clear: both;
+        margin-inline: 20px;
+        font-weight: 700;
+        font-family: "Roboto Condensed";
+        color: var(--red);
+        padding: 5px;
+        margin-top: 40px;
+        margin-bottom: 30px;
+        margin-inline: -5px;
+        //box-shadow: -10px 0px 0px #c90415, 10px 0px 0px #c90415, 0px 0px 10px #c90415;
       }
-      &::before {
-        content: "";
-        display: block;
-        background: var(--red);
-        width: 3px;
-        height: calc(100% - 2rem);
-        position: absolute;
-        top: 1rem;
-        bottom: 1rem;
-        left: 1rem;
-      }
-
-    }
-    pre {
-      margin: 0;
-    }
-    code {
-      font-weight: 500;
-      font-family: 'Fira Code', monospace;
-    }
-    code:not(.hljs) {
-      color: var(--red);
-    }
-    div.codewindow {
-      background: #2d2b57;
-      border-radius: 3px;
-      padding: 1rem;
-      margin-bottom: 1rem;
-      header {
-        display: flex;
-        justify-content: space-between;
-        color: white;
-        .lang-info {
-          display: flex;
-          align-items: center;
-          justify-content: center;
-          .lang-icon {
-            display: block;
-            margin-right: .5rem;
-            &.devicon-csharp-plain.colored {
-              color: white !important;
-            }
-          }
-          .lang-name {
-            opacity: .8;
-          }
+      blockquote {
+        background: var(--red-lightest);
+        padding: 1rem 2rem;
+        position: relative;
+        font-weight: 600;
+        p {
+          margin: 0;
         }
-        .copybtn {
-          border: 0;
-          background: none;
-          border-radius: 3px;
-          transition: .2s all;
-          &:focus{
-            outline: 0;
-          }
-          &:active {
-            transform: scale(1.2);
-            background: rgba(255,255,255,.2);
-            opacity: .8;
-          }
+        &::before {
+          content: "";
+          display: block;
+          background: var(--red);
+          width: 3px;
+          height: calc(100% - 2rem);
+          position: absolute;
+          top: 1rem;
+          bottom: 1rem;
+          left: 1rem;
         }
-      }
-      .raw-code {
-        display: none;
       }
       pre {
-        white-space: pre-wrap;
+        margin: 0;
       }
-      code.hljs {
-
+      code {
+        font-weight: 500;
+        font-family: "Fira Code", monospace;
+      }
+      code:not(.hljs) {
+        color: var(--red);
+      }
+      div.codewindow {
+        background: #2d2b57;
+        border-radius: 3px;
+        padding: 1rem;
+        margin-bottom: 1rem;
+        header {
+          display: flex;
+          justify-content: space-between;
+          color: white;
+          .lang-info {
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            .lang-icon {
+              display: block;
+              margin-right: 0.5rem;
+              &.devicon-csharp-plain.colored {
+                color: white !important;
+              }
+            }
+            .lang-name {
+              opacity: 0.8;
+            }
+          }
+          .copybtn {
+            border: 0;
+            background: none;
+            border-radius: 3px;
+            transition: 0.2s all;
+            &:focus {
+              outline: 0;
+            }
+            &:active {
+              transform: scale(1.2);
+              background: rgba(255, 255, 255, 0.2);
+              opacity: 0.8;
+            }
+          }
+        }
+        .raw-code {
+          display: none;
+        }
+        pre {
+          white-space: pre-wrap;
+        }
+        code.hljs {
+        }
       }
     }
-
   }
   div.post-meta {
     display: flex;
@@ -143,7 +148,7 @@ article {
     font-weight: 700;
     font-size: 16px;
     button {
-      margin-left: -.75rem;
+      margin-left: -0.75rem;
     }
     img {
       border-radius: 5000px;
@@ -154,8 +159,8 @@ article {
     font-family: "Roboto Condensed";
     font-weight: 700;
     font-size: 16px;
-    margin-left:20px;
-    color:var(--gray-600);
+    margin-left: 20px;
+    color: var(--gray-600);
     fa-icon {
       color: var(--gray-400);
       margin-right: 10px;
@@ -169,7 +174,6 @@ article {
     font-weight: 700;
     margin-top: 2rem;
   }
-
 }
 
 .loader {
@@ -201,13 +205,13 @@ div.blog-info {
       height: 100%;
       color: var(--red);
       font-size: 2rem;
-      margin-bottom: .1rem;
+      margin-bottom: 0.1rem;
     }
   }
 }
 .back-to-posts-btn {
-  margin-left: -.75rem;
+  margin-left: -0.75rem;
   fa-icon {
-    margin-right: .75rem;
+    margin-right: 0.75rem;
   }
 }
